objects/Review__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include__c</fullName>
        <formula>If( Stage_Work_Element__r.Include__c = TRUE , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <inlineHelpText>“0” means “Not Yet Scored”.  This is the default value and cannot be set by the user
“1” means “Major re-work required”
“2” means “Minor re-work required”
“3” means “Meets stage exit criteria”</inlineHelpText>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <formula>Role__r.Role_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Process Role</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Work_Element_Name__c</fullName>
        <formula>Stage_Work_Element__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Element Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Work_Element__c</fullName>
        <label>Work Element Id</label>
        <referenceTo>Stage_Work_Element__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Team_Member_Name__c</fullName>
        <formula>Team_Member__r.User__r.FirstName &amp;&quot; &quot;&amp;Team_Member__r.User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member Id</label>
        <referenceTo>Core_Team_Member__c</referenceTo>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Review</label>
    <nameField>
        <displayFormat>Review-{0000000000}</displayFormat>
        <label>Review ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>